--- a/Project2i/.cproject
+++ b/Project2i/.cproject
@@ -65,4 +65,9 @@
 		</scannerConfigBuildInfo>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Release">
+			<resource resourceType="PROJECT" workspacePath="/Project2i"/>
+		</configuration>
+	</storageModule>
 </cproject>
